--- a/template.qmd
+++ b/template.qmd
@@ -1,16 +1,32 @@
 ---
-title: Untitled
+title: "**Beispielbericht**"
 format:
   set-template-pdf: default
-author: donvollb
-date: last-modified
+lfoot: "LVE-Bericht FB-Ebene | FB `r params$i + 4` | `r params$Zeitraum.k`"
+color: bluegray
+  # alternativ kann man eigene Farben über \definecolor definieren und sie "maincolor" und "tablecolor" nennen.
+  # mögliche Farben: bluegray, greengray, darkblue, lightblue, darkgreen, lightgreen, violett, pink, red, orange (RPTU-Standardfarben)
+params:
+  i: 4 # Hier modifizieren: i gibt die Zeile der info Datei an und steht für einen Bericht (1: EzW, 2: KSW, 3: NUW, 4: Psych)
+  Zeitraum.k: SoSe24 # Hier modifizieren: Aktuelles Zeitraumskuerzel (z.B. SoSe24, WiSe24/25) fuer die Fusszeile
+header-includes:
+  - \newcommand{\ParamI}{4} # Hier modifizieren: Zahl wie i oben (fuer Stichprobenbeschreibung I auf Titelseite in before-body.tex)
 ---
 
-## Introduction
+{{< pagebreak >}}
 
-*TODO* Create an example file that demonstrates the formatting and features of your format.
+# Stichprobenbeschreibung I
 
-## More Information
+Fachbereich: Test
 
-You can learn more about controlling the appearance of PDF output here: <https://quarto.org/docs/output-formats/pdf-basics.html>
+Campus: Test
+
+\
+\
+\
+
+Insgesamt ausgefüllte Umfragen: ...
+
+
+
 
